# todoforge

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: release-prod.yaml
tests/: test_main.py
tests/commands/: test_spaces.py
tests/utils/: test_config.py  test_db.py  test_helper.py  test_models.py
todoforge/: __init__.py  main.py
todoforge/commands/: spaces.py
todoforge/utils/: config.py  helper.py  menu.py
